refactor: data limitations required a change on project focus

--- a/analysis/1_data_understanding.ipynb
+++ b/analysis/1_data_understanding.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "dc0ae0c3-0dfa-4678-bc5c-a5df4bc8dc97",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
        "1       B    200"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "c5b72f27-48f9-47da-84b7-f33d968879e7",
    "metadata": {
     "scrolled": true
@@ -93,7 +93,8 @@
       "\n",
       " Files in current directory:\n",
       " - .ipynb_checkpoints\n",
-      " - 1_data_understanding.ipynb\n"
+      " - 1_data_understanding.ipynb\n",
+      " - 2_discount_efficiency.ipynb\n"
      ]
     }
    ],
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "1371f72d-b3c7-4ab3-81ed-f708de9240a3",
    "metadata": {},
    "outputs": [
@@ -330,7 +331,7 @@
        "4  https://www.amazon.in/Portronics-Konnect-POR-1...  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "id": "a58e448d-5848-4c93-b028-5b70a84279a3",
    "metadata": {},
    "outputs": [
@@ -367,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "id": "dd8c63db-0c78-4087-9708-336e7e565027",
    "metadata": {},
    "outputs": [
@@ -410,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "id": "8e98b313-f425-4132-8d59-49be5a99d4c6",
    "metadata": {},
    "outputs": [
@@ -564,7 +565,7 @@
        "9  Computers&Accessories|Accessories&Peripherals|...  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "14da215d-e029-4fec-838a-cea28c405e22",
    "metadata": {},
    "outputs": [
@@ -660,7 +661,7 @@
        "freq                 53                  56          120    244            9"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,68 +677,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "eb662e9a-2cfb-4ca8-bb66-bd63fc79b9eb",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "===> Cleaning Data\n",
-      "<=== Cleaning Completed\n"
+      "Data frame copied successfully!\n",
+      "Cleaning currency symbols and removing commas\n",
+      "Cleaning percentage symbols\n",
+      "Cleaning numeric columns\n",
+      "Data Cleaned <===\n"
      ]
     }
    ],
    "source": [
-    "#Data Cleaning Configuration\n",
-    "\n",
-    "CLEANING_CONFIG = {\n",
-    "    'currency_columns' : {\n",
-    "        'discounted_price' : 'discounted_price_clean',\n",
-    "        'actual_price' : 'actual_price_clean'\n",
-    "    },\n",
-    "    'percentage_columns' : {\n",
-    "        'discount_percentage' : 'discount_percent_clean'\n",
-    "    },\n",
-    "    'numeric_columns' : {\n",
-    "        'rating_count' : 'rating_count_clean',\n",
-    "        'rating': 'rating_clean'\n",
-    "    }\n",
-    " }\n",
-    "\n",
-    "#Cleaning Logic\n",
-    "def clean_dataset(df , config):\n",
-    "    df_clean = df.copy()\n",
-    "\n",
-    "    #Clean currency columns removing currency symbols and commas\n",
-    "    for source_col, clean_col in config['currency_columns'].items():\n",
-    "        if source_col in df.columns:\n",
-    "            df_clean[clean_col] = (df[source_col].astype(str).str.replace(r'[₹$,]', '', regex=True)\n",
-    "                    .pipe(pd.to_numeric, errors = 'coerce'))\n",
-    "\n",
-    "    #Clean percentage columns\n",
-    "    for source_col, clean_col in config['percentage_columns'].items():\n",
-    "        if source_col in df.columns:\n",
-    "            df_clean[clean_col] = (df[source_col].astype(str).str.replace('%','')\n",
-    "                .pipe(pd.to_numeric, errors='coerce'))\n",
-    "\n",
-    "    #Clean numeric columns\n",
-    "    for source_col, clean_col in config['numeric_columns'].items():\n",
-    "                if source_col in df.columns:\n",
-    "                    df_clean[clean_col] = pd.to_numeric(df[source_col], errors='coerce')\n",
-    "                    \n",
-    "    return df_clean\n",
+    "import sys\n",
+    "sys.path.append('../src')\n",
+    "from data_cleaning import clean_dataset, validate_cleaning\n",
     "\n",
     "#Cleaning Execution\n",
-    "print(\"===> Cleaning Data\")\n",
-    "df_clean = clean_dataset(df, CLEANING_CONFIG)\n",
-    "print(\"<=== Cleaning Completed\")\n"
+    "df_clean = clean_dataset(df)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "a056344d-4525-44ba-85d8-777e36a9fdf3",
    "metadata": {},
    "outputs": [
@@ -767,14 +737,14 @@
       "max              77990.000000       139900.000000               94.000000   \n",
       "\n",
       "       rating_count_clean  rating_clean  \n",
-      "count          326.000000   1464.000000  \n",
-      "mean           348.217791      4.096585  \n",
-      "std            268.041590      0.291674  \n",
+      "count         1463.000000   1464.000000  \n",
+      "mean         18295.541353      4.096585  \n",
+      "std          42753.864952      0.291674  \n",
       "min              2.000000      2.000000  \n",
-      "25%            119.000000      4.000000  \n",
-      "50%            293.000000      4.100000  \n",
-      "75%            544.000000      4.300000  \n",
-      "max            992.000000      5.000000  \n",
+      "25%           1186.000000      4.000000  \n",
+      "50%           5179.000000      4.100000  \n",
+      "75%          17336.500000      4.300000  \n",
+      "max         426973.000000      5.000000  \n",
       "Sample Before / After:\n",
       "  discounted_price  discounted_price_clean actual_price  actual_price_clean\n",
       "0             ₹399                   399.0       ₹1,099              1099.0\n",
@@ -786,28 +756,13 @@
     }
    ],
    "source": [
-    "#Cleaning Validation.\n",
-    "print(\"=== Cleaning Validation ===\")\n",
-    "\n",
-    "#Check Data Types.\n",
-    "print(\"\\nData Types After Cleaning:\")\n",
-    "clean_cols = [col for col in df_clean.columns if 'clean' in col]\n",
-    "print(df_clean[clean_cols].dtypes)\n",
-    "\n",
-    "#Check Basic Stats\n",
-    "print(\"\\nBasic Stats over Clean Data:\")\n",
-    "print(df_clean[clean_cols].describe())\n",
-    "\n",
-    "#Before / After Comparison.\n",
-    "print(\"Sample Before / After:\" )\n",
-    "sample_cols = ['discounted_price', 'discounted_price_clean', 'actual_price', 'actual_price_clean']\n",
-    "print(df_clean[sample_cols].head(5))\n",
+    "validation_report = validate_cleaning(df_clean)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "6171d7d8-965a-412c-9914-161fce3678cc",
    "metadata": {},
    "outputs": [
@@ -842,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "id": "9744f6a9-5361-46fc-b47d-52371ed573db",
    "metadata": {},
    "outputs": [
